Align size column title to the left to fix overlapping with sorting arrows

--- a/skins/larry/mail.css
+++ b/skins/larry/mail.css
@@ -415,10 +415,13 @@ a.iconbutton.threadmode.selected {
 	border-left: 0;
 }
 
-
 #messagelist tr td.size {
 	width: 60px;
 	text-align: right;
+}
+
+#messagelist thead tr td.size {
+	text-align: left;
 }
 
 #messagelist tr td.fromto,
